--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta name="robots" content="noindex, nofollow">
   <meta name="googlebot" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
   <script type="text/javascript" src="a_data/jquery-git.js"></script>
 
